# connorav

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
connorav/: __init__.py  continuous_dist.py  correl_rv.py  distribution.py
connorav/tests/: test_connorav.py
examples/: example.py
tests/: test_connorav.py
